Belirli dosyalar eklendi: ürün detay sayfası oluşturuldu, üst giyim sayfaları ve ürün dosyası güncellendi

--- a/dress.html
+++ b/dress.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kadın Gömlek Modelleri-FashionShop</title>
+  <title>Kadın Elbise Modelleri-FashionShop</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
   <!--Stil Dosyaları-->
@@ -110,8 +110,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/dress/dısney-dres.jpg" alt="Dısney Beyaz Elbise">
-      <h3>Dısney Beyaz Elbise</h3>
+      <a href="productDetail.html?id=19"><img src="images/urunler/dress/dısney-dres.jpg" alt="Dısney Beyaz Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=19"></a>Dısney Beyaz Elbise</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -119,8 +120,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/dress/denim-dres.jpg" alt="Denim Elbise">
-      <h3> Denim Elbise</h3>
+      <a href="productDetail.html?id=20"><img src="images/urunler/dress/denim-dres.jpg" alt="Denim Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=20"></a>Denim Elbise</h3>
       <p>569.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -128,8 +130,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/dress/baglama-beyaz-dres.jpg" alt="Bağlamalı Beyaz Elbise">
-      <h3>Bağlamalı Beyaz Elbise</h3>
+      <a href="productDetail.html?id=21"><img src="images/urunler/dress/baglama-beyaz-dres.jpg" alt="Bağlamalı Beyaz Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=21"></a>Bağlamalı Beyaz Elbise</h3>
       <p>779.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -137,8 +140,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/dress/dusuk-omuz-mavi-dres.jpg" alt="Düşük Omuz Mavi Elbise">
-      <h3>Düşük Omuz Mavi Elbise</h3>
+      <a href="productDetail.html?id=22"><img src="images/urunler/dress/dusuk-omuz-mavi-dres.jpg" alt="Düşük Omuz Mavi Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=22"></a>Düşük Omuz Mavi Elbise</h3>
       <p>579.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -146,8 +150,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/dress/madonna-yaka-mavi-dres.jpg" alt="Madonna Yaka Mavi Elbise">
-      <h3>Madonna Yaka Mavi Elbise</h3>
+      <a href="productDetail.html?id=23"><img src="images/urunler/dress/madonna-yaka-mavi-dres.jpg" alt="Madonna Yaka Mavi Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=23"></a>Madonna Yaka Mavi Elbise</h3>
       <p>679.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -155,8 +160,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/dress/kemerli-tensel-antrasit-dres.jpg" alt="Kemerli Antrasit Elbise">
-      <h3>Kemerli Antrasit Elbise</h3>
+      <a href="productDetail.html?id=24"><img src="images/urunler/dress/kemerli-tensel-antrasit-dres.jpg" alt="Kemerli Antrasit Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=24"></a>Kemerli Antrasit Elbise</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -164,8 +170,9 @@
 
      <!-- Statik Ürün Kartı 7 -->
      <div class="product-card">
-      <img src="images/urunler/dress/kemerli-tensel-haki-dres.jpg" alt="Kemerli Haki Elbise">
-      <h3>Kemerli Haki Elbise</h3>
+      <a href="productDetail.html?id=25"><img src="images/urunler/dress/kemerli-tensel-haki-dres.jpg" alt="Kemerli Haki Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=25"></a>Kemerli Haki Elbise</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -173,8 +180,9 @@
 
      <!-- Statik Ürün Kartı 8 -->
      <div class="product-card">
-      <img src="images/urunler/dress/siyah-kaskorse-dres.jpg" alt="Siyah Kaşkorse Elbise">
-      <h3>Siyah Kaşkorse Elbise</h3>
+      <a href="productDetail.html?id=26"><img src="images/urunler/dress/siyah-kaskorse-dres.jpg" alt="Siyah Kaşkorse Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=26"></a>Siyah Kaşkorse Elbise</h3>
       <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -182,8 +190,9 @@
 
      <!-- Statik Ürün Kartı 9 -->
      <div class="product-card">
-      <img src="images/urunler/dress/straplez-kot-dres.jpg" alt="Straplez Denim Elbise">
-      <h3>Straplez Denim Elbise</h3>
+      <a href="productDetail.html?id=27"><img src="images/urunler/dress/straplez-kot-dres.jpg" alt="Straplez Denim Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=27"></a>Straplez Denim Elbise</h3>
       <p>789.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -191,8 +200,9 @@
 
      <!-- Statik Ürün Kartı 10 -->
      <div class="product-card">
-      <img src="images/urunler/dress/uzunkollu-dantel-beyaz-dres.jpg" alt="Uzun Kollu Dantel Beyaz Elbise">
-      <h3>Uzun kollu Dantel Beyaz Elbise</h3>
+      <a href="productDetail.html?id=28"><img src="images/urunler/dress/uzunkollu-dantel-beyaz-dres.jpg" alt="Uzun Kollu Dantel Beyaz Elbise">
+      </a>
+      <h3><a href="productDetail.html?id=28"></a>Uzun kollu Dantel Beyaz Elbise</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -250,9 +260,14 @@
 <!-- FOOTER BİTİŞ -->
 
   <!--Script-->
+  <!--product.js dosyası önce verilmeli-->
+  <script src="js/products.js"></script>
+  <script src="js/search.js"></script>
   <script src="js/header.js"></script>
   <script src="js/user.js"></script>
   <script src="js/shirts.js"></script>
+  
+  
   
 
 </body>
