--- a/shirts.html
+++ b/shirts.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/products.css">
   <link rel="stylesheet" href="css/user.css">
   
+  
 </head>
 
 <body>
@@ -105,30 +106,38 @@
 <!-- HEADER BİTİŞ -->
 
   <!-- ANA İÇERİK: Gömlek Ürünleri -->
+   <main>
   <section class="product-list">
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/oversize-beyaz-shirt.jpg" alt="Overize Beyaz Gömlek">
-      <h3>Oversize Gömlek</h3>
+      <a href="productDetail.html?id=49">
+        <img src="images/urunler/shirts/oversize-beyaz-shirt.jpg" alt="Oversize Beyaz Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=49">Oversize Beyaz Gömlek</a></h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
+    
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/pembe-shirt.jpg" alt="Overize Pembe Gömlek">
-      <h3> Overize Pembe Gömlek</h3>
+      <a href="productDetail.html?id=50">
+        <img src="images/urunler/shirts/pembe-shirt.jpg" alt="Oversize Pembe Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=50">Oversize Pembe Gömlek</a></h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
     </div>
+    
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/kahve-shirt.jpg" alt="Overize Kahverengi Gömlek">
-      <h3>Oversize Kahverengi Gömlek</h3>
+      <a href="productDetail.html?id=51"><img src="images/urunler/shirts/kahve-shirt.jpg" alt="Overize Kahverengi Gömlek">
+      </a>
+       <h3><a href="productDetail.html?id=51"></a>Oversize Kahverengi Gömlek</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -136,8 +145,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/pensli-haki-shirt.jpg" alt="Haki Gömlek">
-      <h3>Haki Gömlek</h3>
+      <a href="productDetail.html?id=52"><img src="images/urunler/shirts/pensli-haki-shirt.jpg" alt="Haki Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=52"></a>Haki Gömlek</h3>
       <p>489.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -145,8 +155,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/baglama-siyah-shirt.jpg" alt="Bağlama Siyah Gömlek">
-      <h3>Bağlama Sİyah Gömlek</h3>
+      <a href="productDetail.html?id=53"><img src="images/urunler/shirts/baglama-siyah-shirt.jpg" alt="Bağlama Siyah Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=53"></a>Bağlama Sİyah Gömlek</h3>
       <p>429.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -154,8 +165,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/kot-shirt.jpg" alt="Kot Gömlek">
-      <h3>Kot Gömlek</h3>
+      <a href="productDetail.html?id=54"><img src="images/urunler/shirts/kot-shirt.jpg" alt="Kot Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=54"></a>Kot Gömlek</h3>
       <p>519.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -163,8 +175,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/cizgili-mavi-shirt.jpg" alt="Mavi Çizgili Gömlek">
-      <h3>Mavi Çizgili Gömlek</h3>
+      <a href="productDetail.html?id=55"><img src="images/urunler/shirts/cizgili-mavi-shirt.jpg" alt="Mavi Çizgili Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=55"></a>Mavi Çizgili Gömlek</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -172,8 +185,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/korse-siyah-shirt.jpg" alt="Korse Siyah Gömlek">
-      <h3>Korse Siyah Gömlek</h3>
+      <a href="productDetail.html?id=56"><img src="images/urunler/shirts/korse-siyah-shirt.jpg" alt="Korse Siyah Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=56"></a>Korse Siyah Gömlek</h3>
       <p>429.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -181,8 +195,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/gri-shirt.jpg" alt="Gri Gömlek">
-      <h3>Gri Gömlek</h3>
+      <a href="productDetail.html?id=57"><img src="images/urunler/shirts/gri-shirt.jpg" alt="Gri Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=57"></a>Gri Gömlek</h3>
       <p>359.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -190,8 +205,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/shirts/oversize-siyah-shirt.jpg" alt="Oversize Siyah Gömlek">
-      <h3>Oversize Siyah Gömlek</h3>
+      <a href="productDetail.html?id=58"><img src="images/urunler/shirts/oversize-siyah-shirt.jpg" alt="Oversize Siyah Gömlek">
+      </a>
+      <h3><a href="productDetail.html?id=58"></a>Oversize Siyah Gömlek</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -199,6 +215,7 @@
 
 
   </section>
+</main>
 
    <!-- FOOTER BAŞLANGICI -->
    <footer class="wd-footer footer-container color-scheme-light">
@@ -250,9 +267,13 @@
 
 
   <!--Script-->
+  <!--product.js dosyası önce verilmeli-->
+  <script src="js/products.js"></script>
+  <script src="js/search.js"></script>
   <script src="js/header.js"></script>
   <script src="js/user.js"></script>
   <script src="js/shirts.js"></script>
+  
   
 
 </body>
