--- a/blouse.html
+++ b/blouse.html
@@ -110,8 +110,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/dusuk-omuz-blouse.jpg" alt=" Beyaz Düşük Omuz Bluz">
-      <h3>Beyaz Düşük Omuz Bluz</h3>
+      <a href="productDetail.html?id=1"><img src="images/urunler/blouse/dusuk-omuz-blouse.jpg" alt=" Beyaz Düşük Omuz Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=1"></a>Beyaz Düşük Omuz Bluz</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -119,8 +120,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/madonna-yaka-blouse.jpg" alt=" Siyah Madonna Yaka Bluz">
-      <h3> Siyah Madonna Yaka Bluz</h3>
+      <a href="productDetail.html?id=2"><img src="images/urunler/blouse/madonna-yaka-blouse.jpg" alt=" Siyah Madonna Yaka Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=2"></a> Siyah Madonna Yaka Bluz</h3>
       <p>299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -128,8 +130,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/antrasit-madonna-blouse.jpg" alt="Antrasit Madonna Yaka Düğmeli Bluz">
-      <h3>Antrasit Madonna Yaka Düğmeli Bluz</h3>
+      <a href="productDetail.html?id=3"><img src="images/urunler/blouse/antrasit-madonna-blouse.jpg" alt="Antrasit Madonna Yaka Düğmeli Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=3"></a>Antrasit Madonna Yaka Düğmeli Bluz</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -137,8 +140,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/beyaz-body-blouse.jpg" alt="Beyaz Bodysuit">
-      <h3>Beyaz Bodysuit</h3>
+      <a href="productDetail.html?id=4"><img src="images/urunler/blouse/beyaz-body-blouse.jpg" alt="Beyaz Bodysuit">
+      </a>
+      <h3><a href="productDetail.html?id=4"></a>Beyaz Bodysuit</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -146,8 +150,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/yagyesil-body-blouse.jpg" alt="Yağ Yeişi Bodysuit">
-      <h3>Yağ Yeşili Bodysuit</h3>
+      <a href="productDetail.html?id=5"><img src="images/urunler/blouse/yagyesil-body-blouse.jpg" alt="Yağ Yeişi Bodysuit">
+      </a>
+      <h3><a href="productDetail.html?id=5"></a>Yağ Yeşili Bodysuit</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -155,8 +160,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/siyah-body-blouse.jpg" alt="Siyah Body">
-      <h3>Siyah Body</h3>
+      <a href="productDetail.html?id=6"><img src="images/urunler/blouse/siyah-body-blouse.jpg" alt="Siyah Body">
+      </a>
+      <h3><a href="productDetail.html?id=6"></a>Siyah Body</h3>
       <p>279.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -164,8 +170,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/haki-softtouch-blouse.jpg" alt="Haki Soft Touch Bluz">
-      <h3>Haki Soft Touch Bluz</h3>
+      <a href="productDetail.html?id=7"><img src="images/urunler/blouse/haki-softtouch-blouse.jpg" alt="Haki Soft Touch Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=7"></a>Haki Soft Touch Bluz</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -173,8 +180,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/kahve-softtouch-blouse.jpg" alt="Kahve Soft Touch Bluz">
-      <h3>Kahve Soft Touch Bluz</h3>
+      <a href="productDetail.html?id=8"><img src="images/urunler/blouse/kahve-softtouch-blouse.jpg" alt="Kahve Soft Touch Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=8"></a>Kahve Soft Touch Bluz</h3>
       <p>379.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -182,8 +190,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/blouse/kayıkyaka-beyaz-blouse.jpg" alt="Kayık Yaka Beyaz Bluz">
-      <h3>Kayık Yaka Beyaz Bluz</h3>
+      <a href="productDetail.html?id=89"><img src="images/urunler/blouse/kayıkyaka-beyaz-blouse.jpg" alt="Kayık Yaka Beyaz Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=89"></a>Kayık Yaka Beyaz Bluz</h3>
       <p>329.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -191,8 +200,9 @@
 
     <!-- Statik Ürün Kartı 10-->
     <div class="product-card">
-      <img src="images/urunler/blouse/straplez-siyah-blouse.jpg" alt="Straplez Siyah Bluz">
-      <h3>Straplez Siyah Bluz</h3>
+      <a href="productDetail.html?id=90"><img src="images/urunler/blouse/straplez-siyah-blouse.jpg" alt="Straplez Siyah Bluz">
+      </a>
+      <h3><a href="productDetail.html?id=90"></a>Straplez Siyah Bluz</h3>
       <p>419.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -249,9 +259,15 @@
 </footer>
 <!-- FOOTER BİTİŞ -->
 
+<!--Script Dosyaları-->
+<!--product.js dosyası önce verilmeli-->
+<script src="js/products.js"></script>
+<script src="js/search.js"></script>
 <script src="js/header.js"></script>
 <script src="js/user.js"></script>
 <script src="js/shirts.js"></script>
+
+
 
 </body>
 
