alt giyim ve dış giyime ürün detayları eklendi

--- a/jackets.html
+++ b/jackets.html
@@ -102,8 +102,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/BejKurkCeket.jpg" alt="Bej Kürk Ceket">
-      <h3>Bej Kürk Ceket</h3>
+      <a href="productDetail.html?id=29"><img src="images/urunler/jackets/BejKurkCeket.jpg" alt="Bej Kürk Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=29"></a>Bej Kürk Ceket</h3>
       <p>799.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -111,8 +112,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/BejKusaklıCeket.jpg" alt="Bej Kuşaklı Ceket">
-      <h3> Bej Kuşaklı Ceket</h3>
+      <a href="productDetail.html?id=30"><img src="images/urunler/jackets/BejKusaklıCeket.jpg" alt="Bej Kuşaklı Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=30"></a> Bej Kuşaklı Ceket</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -120,8 +122,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/BeyazCropCeket.jpg" alt="Beyaz Crop Ceket ">
-      <h3>Beyaz Crop Ceket </h3>
+      <a href="productDetail.html?id=31"><img src="images/urunler/jackets/BeyazCropCeket.jpg" alt="Beyaz Crop Ceket ">
+      </a>
+      <h3><a href="productDetail.html?id=31"></a>Beyaz Crop Ceket </h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -129,8 +132,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/CizgiliOversizeCeket.jpg" alt="Siyah Çizgili Oversize Ceket">
-      <h3>Siyah Çizgili Oversize Ceket</h3>
+      <a href="productDetail.html?id=32"><img src="images/urunler/jackets/CizgiliOversizeCeket.jpg" alt="Siyah Çizgili Oversize Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=32"></a>Siyah Çizgili Oversize Ceket</h3>
       <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -138,8 +142,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/DenimCeket.jpg" alt="Mavi Denim Ceket">
-      <h3>Mavi Denim Ceket</h3>
+      <a href="productDetail.html?id=33"><img src="images/urunler/jackets/DenimCeket.jpg" alt="Mavi Denim Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=33"></a>Mavi Denim Ceket</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -147,8 +152,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/KahveDeriCeket.jpg" alt="Kahve Deri Ceket">
-      <h3>Kahve Deri Ceket</h3>
+      <a href="productDetail.html?id=34"><img src="images/urunler/jackets/KahveDeriCeket.jpg" alt="Kahve Deri Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=34"></a>Kahve Deri Ceket</h3>
       <p>799.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -156,8 +162,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/KahveKısaCeket.jpg" alt="Kahve Kısa Ceket">
-      <h3>Kahve Kısa Ceket</h3>
+      <a href="productDetail.html?id=35"><img src="images/urunler/jackets/KahveKısaCeket.jpg" alt="Kahve Kısa Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=35"></a>Kahve Kısa Ceket</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -165,8 +172,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/LacivertBlazer.jpg" alt="Lacivert Belden Oturmalı Ceket">
-      <h3>Lacivert Belden Oturmalı Ceket</h3>
+      <a href="productDetail.html?id=36"><img src="images/urunler/jackets/LacivertBlazer.jpg" alt="Lacivert Belden Oturmalı Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=36"></a>Lacivert Belden Oturmalı Ceket</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -174,8 +182,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/LeoparCeket.jpg" alt="Leopar Desenli Ceket">
-      <h3>Leopar Desenli Ceket</h3>
+      <a href="productDetail.html?id=37"><img src="images/urunler/jackets/LeoparCeket.jpg" alt="Leopar Desenli Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=37"></a>Leopar Desenli Ceket</h3>
       <p>899.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -183,8 +192,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/jackets/OturanDenim.jpg" alt="Belden Oturmalı Denim Ceket">
-      <h3>Belden Oturmalı Denim Ceket</h3>
+      <a href="productDetail.html?id=38"><img src="images/urunler/jackets/OturanDenim.jpg" alt="Belden Oturmalı Denim Ceket">
+      </a>
+      <h3><a href="productDetail.html?id=38"></a>Belden Oturmalı Denim Ceket</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
