--- a/pants.html
+++ b/pants.html
@@ -103,8 +103,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/pants/KumasPantolon1.jpg" alt="Çizgili Kumaş Pantolon">
-      <h3>Çizgili Kumaş Pantolon</h3>
+      <a href="productDetail.html?id=39"><img src="images/urunler/pants/KumasPantolon1.jpg" alt="Çizgili Kumaş Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=39"></a>Çizgili Kumaş Pantolon</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -112,8 +113,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/pants/KetenPantolon1.jpg" alt="Beyaz Keten Pantolon">
-      <h3> Beyaz Keten Pantolon</h3>
+      <a href="productDetail.html?id=40"><img src="images/urunler/pants/KetenPantolon1.jpg" alt="Beyaz Keten Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=40"></a> Beyaz Keten Pantolon</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -121,8 +123,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/pants/PembeKPantolon1.jpg" alt="Pembe Kumaş Pantolon ">
-      <h3>Pembe Kumaş Pantolon </h3>
+      <a href="productDetail.html?id=41"><img src="images/urunler/pants/PembeKPantolon1.jpg" alt="Pembe Kumaş Pantolon ">
+      </a>
+      <h3><a href="productDetail.html?id=41"></a>Pembe Kumaş Pantolon </h3>
       <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -130,8 +133,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/pants/KahvePalazzoP1.jpg" alt="Kahve Palazzo Pantolon">
-      <h3>Kahve Palazzo Pantolon</h3>
+      <a href="productDetail.html?id=42"><img src="images/urunler/pants/KahvePalazzoP1.jpg" alt="Kahve Palazzo Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=42"></a>Kahve Palazzo Pantolon</h3>
       <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -139,8 +143,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/pants/LeoparJean1.jpg" alt="Leopar Desenli Jean">
-      <h3>Leopar Desenli Jean</h3>
+      <a href="productDetail.html?id=43"><img src="images/urunler/pants/LeoparJean1.jpg" alt="Leopar Desenli Jean">
+      </a>
+      <h3><a href="productDetail.html?id=43"></a>Leopar Desenli Jean</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -148,8 +153,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/pants/DeriPantolon1.jpg" alt="Deri Pantolon">
-      <h3>Deri Pantolon</h3>
+      <a href="productDetail.html?id=44"><img src="images/urunler/pants/DeriPantolon1.jpg" alt="Deri Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=44"></a>Deri Pantolon</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -157,8 +163,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/pants/EskitmeJean1.jpg" alt="Eskitme Wide Jean">
-      <h3>Eskitme Wide Jean</h3>
+      <a href="productDetail.html?id=45"><img src="images/urunler/pants/EskitmeJean1.jpg" alt="Eskitme Wide Jean">
+      </a>
+      <h3><a href="productDetail.html?id=45"></a>Eskitme Wide Jean</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -166,8 +173,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/pants/BeyazJean1.jpg" alt="İspanyol Paça Beyaz Jean">
-      <h3>İspanyol Paça Beyaz Jean</h3>
+      <a href="productDetail.html?id=46"><img src="images/urunler/pants/BeyazJean1.jpg" alt="İspanyol Paça Beyaz Jean">
+      </a>
+      <h3><a href="productDetail.html?id=46"></a>İspanyol Paça Beyaz Jean</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -175,8 +183,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/pants/PudraPantolon.jpg" alt="Pudra Pantolon">
-      <h3>Pudra Pantolon</h3>
+      <a href="productDetail.html?id=47"><img src="images/urunler/pants/PudraPantolon.jpg" alt="Pudra Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=47"></a>Pudra Pantolon</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -184,8 +193,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/pants/AntrasitPantolon.jpg" alt="Antrasit Pantolon">
-      <h3>Antrasit Pantolon</h3>
+      <a href="productDetail.html?id=48"><img src="images/urunler/pants/AntrasitPantolon.jpg" alt="Antrasit Pantolon">
+      </a>
+      <h3><a href="productDetail.html?id=48"></a>Antrasit Pantolon</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
