--- a/shorts.html
+++ b/shorts.html
@@ -102,8 +102,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/BeyazKotSort.jpg" alt="Beyaz Kot Şort">
-      <h3>Beyaz Kot Şort</h3>
+      <a href="productDetail.html?id=59"><img src="images/urunler/shorts/BeyazKotSort.jpg" alt="Beyaz Kot Şort">
+      </a>
+      <h3><a href="productDetail.html?id=59"></a>Beyaz Kot Şort</h3>
       <p>399.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -111,8 +112,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/MaviKotSort.jpg" alt="Mavi Kot Şort">
-      <h3> Mavi Kot Şort</h3>
+      <a href="productDetail.html?id=60"><img src="images/urunler/shorts/MaviKotSort.jpg" alt="Mavi Kot Şort">
+      </a>
+      <h3><a href="productDetail.html?id=60"></a> Mavi Kot Şort</h3>
       <p>399.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -120,8 +122,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/BermudaSort.jpg" alt="Bermuda Şort ">
-      <h3>Bermuda Şort</h3>
+      <a href="productDetail.html?id=61"><img src="images/urunler/shorts/BermudaSort.jpg" alt="Bermuda Şort ">
+      </a>
+      <h3><a href="productDetail.html?id=61"></a>Bermuda Şort</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -129,8 +132,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/BeyazKetenSort.jpg" alt="Beyaz Keten Şort ">
-      <h3>Beyaz Keten Şort </h3>
+      <a href="productDetail.html?id=62"><img src="images/urunler/shorts/BeyazKetenSort.jpg" alt="Beyaz Keten Şort ">
+      </a>
+      <h3><a href="productDetail.html?id=62"></a>Beyaz Keten Şort </h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -138,8 +142,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/YırtıkKotSort.jpg" alt="Yırtık Kot Şort">
-      <h3>Yırtık Kot Şort</h3>
+      <a href="productDetail.html?id=63"><img src="images/urunler/shorts/YırtıkKotSort.jpg" alt="Yırtık Kot Şort">
+      </a>
+      <h3><a href="productDetail.html?id=63"></a>Yırtık Kot Şort</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -148,8 +153,9 @@
     
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/KetenSort.JPG" alt="Keten Şort">
-      <h3>Keten Şort</h3>
+      <a href="productDetail.html?id=64"><img src="images/urunler/shorts/KetenSort.JPG" alt="Keten Şort">
+      </a>
+      <h3><a href="productDetail.html?id=64"></a>Keten Şort</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -157,8 +163,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/SiyahSort.jpg" alt="Siyah Kot Şort">
-      <h3>Siyah Kot Şort</h3>
+      <a href="productDetail.html?id=65"><img src="images/urunler/shorts/SiyahSort.jpg" alt="Siyah Kot Şort">
+      </a>
+      <h3><a href="productDetail.html?id=65"></a>Siyah Kot Şort</h3>
       <p>399.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -166,8 +173,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/BordoSort.jpg" alt="Bordo Şort">
-      <h3>Bordo Şort</h3>
+      <a href="productDetail.html?id=66"><img src="images/urunler/shorts/BordoSort.jpg" alt="Bordo Şort">
+      </a>
+      <h3><a href="productDetail.html?id=66"></a>Bordo Şort</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -175,8 +183,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/MaviSort.jpg" alt="Mavi Şort">
-      <h3>Mavi Şort</h3>
+      <a href="productDetail.html?id=67"><img src="images/urunler/shorts/MaviSort.jpg" alt="Mavi Şort">
+      </a>
+      <h3><a href="productDetail.html?id=67"></a>Mavi Şort</h3>
       <p>349.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -184,8 +193,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/shorts/PudraSort.jpg" alt="Keten Pudra Şort">
-      <h3>Keten Pudra Şort</h3>
+      <a href="productDetail.html?id=68"><img src="images/urunler/shorts/PudraSort.jpg" alt="Keten Pudra Şort">
+      </a>
+      <h3><a href="productDetail.html?id=68"></a>Keten Pudra Şort</h3>
       <p>399.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
