--- a/skirt.html
+++ b/skirt.html
@@ -104,8 +104,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
-      <h3>Katlı Mini Etek</h3>
+      <a href="productDetail.html?id=69"><img src="images/urunler/skirts/KatlıMiniEtek.jpg" alt="Katlı Mini Etek">
+      </a>
+      <h3><a href="productDetail.html?id=69"></a>Katlı Mini Etek</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -113,8 +114,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
-      <h3> Uzun Yırtmaçlı Etek</h3>
+      <a href="productDetail.html?id=70"><img src="images/urunler/skirts/UzunYırtmaclıEtek.jpg" alt="Uzun Yırtmaçlı Etek">
+      </a>
+      <h3><a href="productDetail.html?id=70"></a> Uzun Yırtmaçlı Etek</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -122,8 +124,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
-      <h3>Kahve Deri Mini Etek </h3>
+      <a href="productDetail.html?id=71"><img src="images/urunler/skirts/DeriMiniEtek.jpg" alt="Kahve Deri Mini Etek">
+      </a>
+      <h3><a href="productDetail.html?id=71"></a>Kahve Deri Mini Etek </h3>
       <p>549.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -131,8 +134,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunTülEtek.jpg" alt="Tüllü Mini Etek">
-      <h3>Tüllü Mini Etek</h3>
+      <a href="productDetail.html?id=72"><img src="images/urunler/skirts/UzunTülEtek.jpg" alt="Tüllü Mini Etek">
+      </a>
+      <h3><a href="productDetail.html?id=72"></a>Tüllü Mini Etek</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -140,8 +144,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
-      <h3>Beyaz Mini Tül Etek</h3>
+      <a href="productDetail.html?id=73"><img src="images/urunler/skirts/MiniTulEtek.jpg" alt="Beyaz Mini Tül Etek">
+      </a>
+      <h3><a href="productDetail.html?id=73"></a>Beyaz Mini Tül Etek</h3>
       <p>599.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -149,8 +154,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
-      <h3>Siyah Fırfırlı Mini Etek</h3>
+      <a href="productDetail.html?id=74"><img src="images/urunler/skirts/FırfırlıMiniEtek.jpg" alt="Siyah Fırfırlı Mini Etek">
+      </a>
+      <h3><a href="productDetail.html?id=74"></a>Siyah Fırfırlı Mini Etek</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -158,8 +164,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
-      <h3>Mini Bordo Etek</h3>
+      <a href="productDetail.html?id=75"><img src="images/urunler/skirts/MiniBordoEtek.jpg" alt="Mini Bordo Etek">
+      </a>
+      <h3><a href="productDetail.html?id=75"></a>Mini Bordo Etek</h3>
       <p>399.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -167,8 +174,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
-      <h3>Mini Kot Etek</h3>
+      <a href="productDetail.html?id=76"><img src="images/urunler/skirts/MiniKotEtek.jpg" alt="Mini Kot Etek">
+      </a>
+      <h3><a href="productDetail.html?id=76"></a>Mini Kot Etek</h3>
       <p>499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -176,8 +184,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
-      <h3>Uzun Lacivert Etek</h3>
+      <a href="productDetail.html?id=77"><img src="images/urunler/skirts/UzunLacivertEtek.jpg" alt="Uzun Lacivert Etek">
+      </a>
+      <h3><a href="productDetail.html?id=77"></a>Uzun Lacivert Etek</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -185,8 +194,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
-      <h3>Yeşil Pileli Etek</h3>
+      <a href="productDetail.html?id=78"><img src="images/urunler/skirts/PileliYesilEtek.jpg" alt="Yeşil Pileli Etek">
+      </a>
+      <h3><a href="productDetail.html?id=78"></a>Yeşil Pileli Etek</h3>
       <p>449.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
