--- a/coats.html
+++ b/coats.html
@@ -102,8 +102,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/coats/AcıKahveKısaKurk.jpg" alt="Acı Kahve Kısa Kürk">
-      <h3>Acı Kahve Kısa Kürk</h3>
+      <a href="productDetail.html?id=9"><img src="images/urunler/coats/AcıKahveKısaKurk.jpg" alt="Acı Kahve Kısa Kürk">
+      </a>
+      <h3><a href="productDetail.html?id=9"></a>Acı Kahve Kısa Kürk</h3>
       <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -111,8 +112,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/coats/AntrasitKaseKaban.jpg" alt="Antrasit Maxi Kaşe Kaban">
-      <h3>Antrasit Maxi Kaşe Kaban</h3>
+      <a href="productDetail.html?id=10"><img src="images/urunler/coats/AntrasitKaseKaban.jpg" alt="Antrasit Maxi Kaşe Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=10"></a>Antrasit Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -120,8 +122,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/coats/BejKaseKaban.jpg" alt="Bej Maxi Kaşe Kaban">
-      <h3>Bej Maxi Kaşe Kaban </h3>
+      <a href="productDetail.html?id=11"><img src="images/urunler/coats/BejKaseKaban.jpg" alt="Bej Maxi Kaşe Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=11"></a>Bej Maxi Kaşe Kaban </h3>
       <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -129,8 +132,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/coats/CizgiliKısaKaban.jpg" alt="Çizgili Kısa Kaban">
-      <h3>Çizgili Kısa Kaban</h3>
+      <a href="productDetail.html?id=12"><img src="images/urunler/coats/CizgiliKısaKaban.jpg" alt="Çizgili Kısa Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=12"></a>Çizgili Kısa Kaban</h3>
       <p>1199.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -138,8 +142,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/coats/KahveDenimMont.jpg" alt="Kahve Denim Detaylı Mont">
-      <h3>Kahve Denim Detaylı Mont</h3>
+      <a href="productDetail.html?id=13"><img src="images/urunler/coats/KahveDenimMont.jpg" alt="Kahve Denim Detaylı Mont">
+      </a>
+      <h3><a href="productDetail.html?id=13"></a>Kahve Denim Detaylı Mont</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -147,8 +152,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/coats/KahveKaseKaban.jpg" alt="Kahve Maxi Kaşe Kaban">
-      <h3>Kahve Maxi Kaşe Kaban</h3>
+      <a href="productDetail.html?id=14"><img src="images/urunler/coats/KahveKaseKaban.jpg" alt="Kahve Maxi Kaşe Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=14"></a>Kahve Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -156,8 +162,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/coats/KurkluSiyahKaseKaban.jpg" alt="Kürklü Siyah Kaşe Kaban">
-      <h3>Kürklü Siyah Kaşe Kaban</h3>
+      <a href="productDetail.html?id=15"><img src="images/urunler/coats/KurkluSiyahKaseKaban.jpg" alt="Kürklü Siyah Kaşe Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=15"></a>Kürklü Siyah Kaşe Kaban</h3>
       <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -165,8 +172,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/coats/SiyahKaseKaban.jpg" alt="Siyah Maxi Kaşe Kaban">
-      <h3>Siyah Maxi Kaşe Kaban</h3>
+      <a href="productDetail.html?id=16"><img src="images/urunler/coats/SiyahKaseKaban.jpg" alt="Siyah Maxi Kaşe Kaban">
+      </a>
+      <h3><a href="productDetail.html?id=16"></a>Siyah Maxi Kaşe Kaban</h3>
       <p>1299.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -174,8 +182,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/coats/TasBaglamalıMont.jpg" alt="Taş Renk Bağlamalı Mont">
-      <h3>Taş Renk Bağlamalı Mont</h3>
+      <a href="productDetail.html?id=17"><img src="images/urunler/coats/TasBaglamalıMont.jpg" alt="Taş Renk Bağlamalı Mont">
+      </a>
+      <h3><a href="productDetail.html?id=17"></a>Taş Renk Bağlamalı Mont</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -183,8 +192,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/coats/TasOrtaKürk.jpg" alt="Taş Renk Orta Boy Kürk">
-      <h3>Taş Renk Orta Boy Kürk</h3>
+      <a href="productDetail.html?id=18"><img src="images/urunler/coats/TasOrtaKürk.jpg" alt="Taş Renk Orta Boy Kürk">
+      </a>
+      <h3><a href="productDetail.html?id=18"></a>Taş Renk Orta Boy Kürk</h3>
       <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
