--- a/trenchcoats.html
+++ b/trenchcoats.html
@@ -101,8 +101,9 @@
 
     <!-- Statik Ürün Kartı 1 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/AntrasitMaxiTrenc.jpg" alt="Antrasit Maxi Trençkot">
-      <h3>Antrasit Maxi Trençkot</h3>
+      <a href="productDetail.html?id=79"><img src="images/urunler/trenchcoats/AntrasitMaxiTrenc.jpg" alt="Antrasit Maxi Trençkot">
+      <a href=""></a>
+      <h3><a href="productDetail.html?id=79"></a>Antrasit Maxi Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -110,8 +111,9 @@
 
     <!-- Statik Ürün Kartı 2 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/BejMaxiTrenc.jpg" alt="Bej Maxi Trençkot">
-      <h3> Bej Maxi Trençkot</h3>
+      <a href="productDetail.html?id=80"><img src="images/urunler/trenchcoats/BejMaxiTrenc.jpg" alt="Bej Maxi Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=80"></a> Bej Maxi Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -119,8 +121,9 @@
 
     <!-- Statik Ürün Kartı 3 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/DeriMaxiTrenc.jpg" alt="Deri Maxi Trençkot ">
-      <h3>Deri Maxi Trençkot </h3>
+      <a href="productDetail.html?id=81"><img src="images/urunler/trenchcoats/DeriMaxiTrenc.jpg" alt="Deri Maxi Trençkot ">
+      </a>
+      <h3><a href="productDetail.html?id=81"></a>Deri Maxi Trençkot </h3>
       <p>1499.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -128,8 +131,9 @@
 
     <!-- Statik Ürün Kartı 4 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/HakiMaxiTrenc.jpg" alt="Haki Maxi Trençkot">
-      <h3>Haki Maxi Trençkot</h3>
+      <a href="productDetail.html?id=82"><img src="images/urunler/trenchcoats/HakiMaxiTrenc.jpg" alt="Haki Maxi Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=82"></a>Haki Maxi Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -137,8 +141,9 @@
 
     <!-- Statik Ürün Kartı 5 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/AntrasitCropTrenc.jpg" alt="Antrasit Crop Trençkot">
-      <h3>Antrasit Crop Trençkot</h3>
+      <a href="productDetail.html?id=83"><img src="images/urunler/trenchcoats/AntrasitCropTrenc.jpg" alt="Antrasit Crop Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=83"></a>Antrasit Crop Trençkot</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -146,8 +151,9 @@
 
     <!-- Statik Ürün Kartı 6 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/BordoCropTrenc.jpg" alt="Bordo Crop Trençkot">
-      <h3>Bordo Crop Trençkot</h3>
+      <a href="productDetail.html?id=84"><img src="images/urunler/trenchcoats/BordoCropTrenc.jpg" alt="Bordo Crop Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=84"></a>Bordo Crop Trençkot</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -155,8 +161,9 @@
 
     <!-- Statik Ürün Kartı 7 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/DenimTrenc.jpg" alt="Orta Boy Denim Trençkot">
-      <h3>Orta Boy Denim Trençkot</h3>
+      <a href="productDetail.html?id=85"><img src="images/urunler/trenchcoats/DenimTrenc.jpg" alt="Orta Boy Denim Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=85"></a>Orta Boy Denim Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -164,8 +171,9 @@
 
     <!-- Statik Ürün Kartı 8 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/DeriOrtaTrenc.jpg" alt="Orta Boy Deri Trençkot">
-      <h3>Orta Boy Deri Trençkot</h3>
+      <a href="productDetail.html?id=86"><img src="images/urunler/trenchcoats/DeriOrtaTrenc.jpg" alt="Orta Boy Deri Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=86"></a>Orta Boy Deri Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -173,8 +181,9 @@
 
     <!-- Statik Ürün Kartı 9 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/HakiOrtaTrenc.jpg" alt="Haki Orta Boy Trençkot">
-      <h3>Haki Orta Boy Trençkot</h3>
+      <a href="productDetail.html?id=87"><img src="images/urunler/trenchcoats/HakiOrtaTrenc.jpg" alt="Haki Orta Boy Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=87"></a>Haki Orta Boy Trençkot</h3>
       <p>999.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
@@ -182,8 +191,9 @@
 
     <!-- Statik Ürün Kartı 10 -->
     <div class="product-card">
-      <img src="images/urunler/trenchcoats/LacivertCropTrenc.jpg" alt="Lacivert Crop Trençkot">
-      <h3>Lacivert Crop Trençkot</h3>
+      <a href="productDetail.html?id=88"><img src="images/urunler/trenchcoats/LacivertCropTrenc.jpg" alt="Lacivert Crop Trençkot">
+      </a>
+      <h3><a href="productDetail.html?id=88"></a>Lacivert Crop Trençkot</h3>
       <p>699.99 TL</p>
       <button class="add-to-cart">Sepete Ekle</button>
       <button class="favorite-icon">♥</button>
